Premier test unitaire et fix email invalid crash app

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,6 @@
         <input type="email" name="email" id=""/>
         <button type="submit">Enter</button>
     </form>
+    {{ error_message }}
 </body>
 </html>
