--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,8 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GUDLFT Registration</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}GUDLFT Registration{% endblock %}
+
+    {% block content %}
     <h1>Welcome to the GUDLFT Registration Portal!</h1>
     Please enter your secretary email to continue:
     <form action="showSummary" method="post">
@@ -12,6 +10,7 @@
         <input type="email" name="email" id=""/>
         <button type="submit">Enter</button>
     </form>
-    {{ error_message }}
-</body>
-</html>
+
+    {% include 'message.j2' %}
+
+{% endblock content %}
