--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,6 @@
     </form>
 
     {% include 'message.j2' %}
+    <a href="{{ url_for('list_clubs') }}">List of clubs</a>
 
 {% endblock content %}
